src/objects/SPE_Product_Transform_Table__c.object
<CustomObject>
    <fields>
        <fullName>FromValue__c</fullName>
        <label>From Value</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ToValue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ToValue</label>
        <referenceTo>SPE_BUBL__c</referenceTo>
        <relationshipLabel>Product Transform Table</relationshipLabel>
        <relationshipName>Product_Transform_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transform__c</fullName>
        <label>Transform</label>
        <picklist>
            <picklistValues>
                <fullName>Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Product Transform Table</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Product Transform Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Transform Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>